@@ -1,4 +1,4 @@
-DIR   = /$(LIB)/rcscripts/net 
+DIR   = $(RC_LIB)/net 
 FILES = dhclient.sh dhcpcd.sh macchanger.sh macnet.sh ssidnet.sh system.sh \
 	wpa_supplicant.sh
 
