@@ -1,4 +1,4 @@
-DIR   = /$(LIB)/rcscripts/sh
+DIR   = $(RC_LIB)/sh
 FILES = functions.sh init-functions.sh init-common-post.sh \
 	rc-functions.sh rc-mount.sh
 EXES  = gendepends.sh net.sh rc-mount.sh rc-help.sh runscript.sh
